--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   },
   "homepage": "https://github.com/williamchang73/graphql-demo#readme",
   "dependencies": {
+    "Faker": "^0.7.2",
     "express": "^4.14.0",
     "express-graphql": "^0.5.3",
     "graphiql": "^0.7.5",
     "graphql": "^0.6.2",
     "react": "^15.3.1",
-    "react-dom": "^15.3.1"
+    "react-dom": "^15.3.1",
+    "sequelize": "^3.24.1"
   }
 }
